fix: popover not showing for basic plan limit breach

--- a/app/src/features/pricing/components/PremiumFeature/components/RequestFeatureModal/index.scss
+++ b/app/src/features/pricing/components/PremiumFeature/components/RequestFeatureModal/index.scss
@@ -50,4 +50,7 @@
     width: 40px;
     height: 40px;
   }
+  .post-request-message.ant-typography {
+    text-align: center;
+  }
 }
